[gd_scene load_steps=15 format=3 uid="uid://da61af5kfk5ik"]

[ext_resource type="Script" uid="uid://crlfygg0huuya" path="res://Scripts/enemy.gd" id="1_skb27"]
[ext_resource type="Texture2D" uid="uid://d0vm765cr4nxo" path="res://Sprites/enemigo1.png" id="2_evuxq"]
[ext_resource type="Texture2D" uid="uid://c3i0k0p83xxum" path="res://Sprites/enemigo1_attack.png" id="2_sttes"]
[ext_resource type="Texture2D" uid="uid://dauodg5nd35hj" path="res://Sprites/enemigo1_idle.png" id="3_atkjq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0gqy"]
size = Vector2(38, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdgrx"]
atlas = ExtResource("2_sttes")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmo81"]
atlas = ExtResource("2_sttes")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa188"]
atlas = ExtResource("2_sttes")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml3um"]
atlas = ExtResource("3_atkjq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_llxf8"]
atlas = ExtResource("3_atkjq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms8oy"]
atlas = ExtResource("2_evuxq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3tob"]
atlas = ExtResource("2_evuxq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3q7bq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdgrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmo81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa188")
}],
"loop": true,
"name": &"attack slime green",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml3um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llxf8")
}],
"loop": true,
"name": &"idle slime green",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms8oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3tob")
}],
"loop": true,
"name": &"walk  slime green",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_287tu"]
size = Vector2(34.6667, 20)

[node name="enemy" type="CharacterBody2D" groups=["enemy", "persistent", "water"]]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_skb27")
move_speed = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r0gqy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_3q7bq")
animation = &"idle slime green"
autoplay = "idle slime green"

[node name="left_floor" type="RayCast2D" parent="."]
position = Vector2(-16, 5.33333)
target_position = Vector2(0, 21.3333)

[node name="left_wall" type="RayCast2D" parent="."]
position = Vector2(-21.3333, 0)
target_position = Vector2(-26.6667, 0)

[node name="right_wall" type="RayCast2D" parent="."]
position = Vector2(16, 0)
rotation = 3.14159
target_position = Vector2(-26.6667, 0)

[node name="right_floor" type="RayCast2D" parent="."]
position = Vector2(10.6667, 5.33333)
target_position = Vector2(0, 21.3333)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_287tu")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
